chore: npmrc update

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-registry=https://npm.pkg.github.com/sirohiwebdev
+@sirohiwebdev:registry=https://npm.pkg.github.com/sirohiwebdev
 //npm.pkg.github.com/:_authToken=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
