--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,3 @@
-@sirohiwebdev:registry=https://npm.pkg.github.com
+registry=https://registry.npmjs.org/
+@sirohiwebdev:registry=https://npm.pkg.github.com/
 //npm.pkg.github.com/:_authToken=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
