--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "docker:prod": "docker-compose --file docker-compose.yml --file docker-compose.prod.yml --compatibility up --build"
   },
   "dependencies": {
-    "@sirohiwebdev/mia-core": "^1.0.1",
+    "@sirohiwebdev/mia-core": "https://github.com/sirohiwebdev/mia-core.git",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
