--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "repository": "https://github.com/onfratecnologies/mia-backend.git",
   "description": "RESTful API for MIA Backend, powered by TypeScript Express and TypeORM",
   "scripts": {
-    "dev": "debug=* NODE_PATH=./src ts-node-dev --respawn ./src/index.ts",
+    "dev": "DOTENV_CONFIG_PATH=.env.local debug=* NODE_PATH=./src ts-node-dev --respawn ./src/index.ts",
+    "invitations": "DOTENV_CONFIG_PATH=.env.local debug=* NODE_PATH=./src ts-node src/services/invitations.ts",
     "build": "rimraf dist && tsc",
     "prestart": "npm run build",
     "start": "NODE_PATH=./dist node ./dist/index.js",
@@ -26,7 +27,10 @@
     "docker:prod": "docker-compose --file docker-compose.yml --file docker-compose.prod.yml --compatibility up --build"
   },
   "dependencies": {
-    "@sirohiwebdev/mia-core": "https://github.com/sirohiwebdev/mia-core.git",
+    "@aws-sdk/client-s3": "^3.51.0",
+    "@aws-sdk/lib-storage": "^3.51.0",
+    "@sirohiwebdev/mia-core": "1.0.6",
+    "aws-sdk": "^2.1073.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
@@ -34,6 +38,7 @@
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
     "helmet": "^4.6.0",
+    "i": "^0.3.7",
     "jimp": "^0.16.1",
     "joi": "^17.5.0",
     "jsonwebtoken": "^8.5.1",
@@ -41,7 +46,9 @@
     "mongodb": "^4.2.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
     "nodemailer": "^6.7.2",
+    "npm": "^8.5.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.41",
@@ -58,9 +65,11 @@
     "@types/express": "^4.17.13",
     "@types/helmet": "4.0.0",
     "@types/jsonwebtoken": "^8.5.6",
+    "@types/lodash": "^4.14.178",
     "@types/mocha": "^9.0.0",
     "@types/morgan": "^1.9.3",
     "@types/multer": "^1.4.7",
+    "@types/multer-s3": "^2.7.11",
     "@types/node": "^17.0.5",
     "@types/nodemailer": "^6.4.4",
     "@types/supertest": "^2.0.11",
