--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0",
     "nodemailer": "^6.7.2",
+    "razorpay": "^2.8.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
