--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "multer-s3": "^2.10.0",
     "nodemailer": "^6.7.2",
     "razorpay": "^2.8.0",
+    "twilio": "^3.75.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
