--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "description": "RESTful API for MIA Backend, powered by TypeScript Express and TypeORM",
   "scripts": {
     "dev": "DOTENV_CONFIG_PATH=.env.local debug=* NODE_PATH=./src ts-node-dev --respawn ./src/index.ts",
-    "invitations": "DOTENV_CONFIG_PATH=.env.local debug=* NODE_PATH=./src ts-node src/services/invitations.ts",
+    "invitations": "DOTENV_CONFIG_PATH=.env.local debug=* NODE_PATH=./src ts-node src/services/video.ts",
     "build": "rimraf dist && tsc",
     "prestart": "npm run build",
     "start": "NODE_PATH=./dist node ./dist/index.js",
@@ -29,7 +29,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.51.0",
     "@aws-sdk/lib-storage": "^3.51.0",
-    "@sirohiwebdev/mia-core": "1.0.6",
+    "@sirohiwebdev/mia-core": "1.1.3",
     "aws-sdk": "^2.1073.0",
     "bcryptjs": "^2.4.3",
     "canvas": "^2.9.0",
