chore: small changes

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ DB_NAME=<database>
 ### JWT
 JWT_SECRET=<some_long_secret>
 JWT_EXPIRATION=15m
+HASH_TIME=24
 
 SMTP_USERNAME=<smtp_user_name>
 SMTP_PASSWORD=<smtp_password>
