--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
   },
   "homepage": "https://github.com/onfratecnologies/mia-backend.git",
   "repository": "https://github.com/onfratecnologies/mia-backend.git",
-  "description": "RESTful API for MIA Backend, powered by TypeScript Express and TypeORM",
+  "description": "REST-ful API for MIA Backend, powered by TypeScript Express and TypeORM",
   "scripts": {
     "dev": "DOTENV_CONFIG_PATH=.env.local debug=* NODE_PATH=./src ts-node-dev --respawn ./src/index.ts",
-    "invitations": "DOTENV_CONFIG_PATH=.env.local debug=* NODE_PATH=./src ts-node src/services/video.ts",
     "build": "rimraf dist && tsc",
     "prestart": "npm run build",
     "start": "NODE_PATH=./dist node ./dist/index.js",
@@ -38,12 +37,7 @@
     "email-templates": "^8.0.8",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
-    "ffcreator": "^6.5.7",
-    "ffmpeg": "0.0.4",
-    "fluent-ffmpeg": "^2.1.2",
-    "gl": "^4.9.2",
     "helmet": "^4.6.0",
-    "i": "^0.3.7",
     "jimp": "^0.16.1",
     "joi": "^17.5.0",
     "jsonwebtoken": "^8.5.1",
