--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "@aws-sdk/lib-storage": "^3.51.0",
     "@sirohiwebdev/mia-core": "1.0.6",
     "aws-sdk": "^2.1073.0",
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
     "email-templates": "^8.0.8",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
+    "form-data": "^4.0.0",
     "helmet": "^4.6.0",
     "i": "^0.3.7",
     "jimp": "^0.16.1",
