--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@types/multer-s3": "^2.7.11",
     "@types/node": "^17.0.5",
     "@types/nodemailer": "^6.4.4",
+    "@types/request": "^2.48.8",
     "@types/supertest": "^2.0.11",
     "@types/validator": "^13.7.1",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
@@ -87,6 +88,7 @@
     "nyc": "^15.1.0",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
+    "request": "^2.88.2",
     "supertest": "^6.1.6",
     "ts-node": "10.4.0",
     "ts-node-dev": "^1.1.8",
